@@ -68,6 +68,7 @@ void init_ob_types(ob_methods *base_type) {
     init_type_director();
     init_type_exit();
     init_type_food();
+    init_type_gate();
     init_type_hole();
     init_type_identify_altar();
     init_type_lamp();
